--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,6 @@ Flask==1.1.1
 Flask-SQLAlchemy==2.4.0
 SQLAlchemy==1.3.8
 Werkzeug==0.15.5
+Flask-SocketIO==4.3.1
+python-engineio==3.13.2
+python-socketio==4.6.0
